--- a/src/app/user/group/group.component.html
+++ b/src/app/user/group/group.component.html
@@ -121,7 +121,7 @@
               </div>
             </div>
             <app-pagination [pageSize]="pageSize" [totalCount]="totalCount" [page]="pageNo"
-              (pageSizeChange)="pageSizeChange($event)" (paginationNum)="paginationNum($event)"></app-pagination>
+              (pageSizeChange)="pageSizeChange($event)" (paginationNum)="changePageNo($event)"></app-pagination>
           </div>
         </div>
       </div>
