--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -309,7 +309,7 @@
       </div>
     </div>
     <app-pagination [pageSize]="pageSize" [totalCount]="totalCount" [page]="pageNo"
-      (pageSizeChange)="pageSizeChange($event)" (paginationNum)="paginationNum($event)"></app-pagination>
+      (pageSizeChange)="pageSizeChange($event)" (paginationNum)="changePageNo($event)"></app-pagination>
     <!-- <div class="card-footer row justify-content-between mx-0">
       <div class="pages">
         <mat-form-field appearance="outline" class="mr-2">
