--- a/src/app/hub/content-workspace/content-workspace.component.html
+++ b/src/app/hub/content-workspace/content-workspace.component.html
@@ -839,9 +839,9 @@
       <table class="table table-hover text-dark w-100" [class.hide-rows]="showRowInfo || showWork" *ngIf="view">
         <thead>
           <tr>
-            <th class="curs-ptr" *ngFor="let col of cols">
+            <th class="curs-ptr" *ngFor="let col of cols;let i =index" (click)="sortChange(col,i)">
               {{col.n}}<i class="fas ml-1"
-                [ngClass]="{'fa-sort-down align-top': col.dir==1, 'fa-sort-up align-bottom': col.dir==0}"></i>
+                [ngClass]="{'fa-sort-down align-top': !col.asc, 'fa-sort-up align-bottom': col.asc}"></i>
             </th>
             <!-- <th scope="col" class="curs-ptr">Name<i class="fas fa-sort-down ml-1 align-top"></i>
             </th>
@@ -873,6 +873,9 @@
                 </span>
                 <span *ngSwitchCase="'createdDate'">
                   {{(cntnt.createdDate|date:'dd MMM, yyyy HH:mm')||'N/A'}}
+                </span>
+                <span *ngSwitchCase="'updatedDate'">
+                  {{(cntnt.updatedDate|date:'dd MMM, yyyy HH:mm')||'N/A'}}
                 </span>
                 <span *ngSwitchCase="'size'">
                   {{getSize(cntnt.size)}}
