--- a/src/app/web-app/resource/collection/collection-list/collection-list.component.html
+++ b/src/app/web-app/resource/collection/collection-list/collection-list.component.html
@@ -26,7 +26,7 @@
           <div class="card-footer">
             <div class="name">{{colctn.name}}</div>
             <div class="float-left text-secondary d-flex">
-              <div class="date">{{colctn.updatedDate.split('T')[0]}}</div>
+              <div class="date">{{(colctn.updatedDate|date:'dd MMM, yyyy')||'N/A'}}</div>
               <div class="mx-2">l</div>
               <div class="items">0 Item(s)</div>
             </div>
@@ -102,7 +102,7 @@
               <div class="name align-self-center">{{colctn.name}}</div>
             </div>
           </td>
-          <td class="align-middle">{{colctn.updatedDate.split('T')[0]}}</td>
+          <td class="align-middle">{{(colctn.updatedDate|date:'dd MMM, yyyy')||'N/A'}}</td>
           <td class="align-middle options">
             <div class="d-flex">
               <div class="dropleft">
