Dev Prod Build,merge,tagName and lan name use now instead of id in content list and info, show loader in main app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,4 @@
   <app-sidebar *ngIf="isToken && !isAuthPage() && !isWebApp()"></app-sidebar>
   <router-outlet></router-outlet>
 </div>
+<app-loader [type]="'page'" *ngIf="!isVisb"></app-loader>
