--- a/src/app/hub/content-workspace/content-workspace.component.html
+++ b/src/app/hub/content-workspace/content-workspace.component.html
@@ -96,6 +96,20 @@
               </div>
             </div>
             <div class="workspace-nav mt-5">
+              <div class="float-right border-bottom">
+                <div class="dropdown">
+                  <button class="btn btn-light" type="button" id="optDD" data-toggle="dropdown" aria-haspopup="true"
+                    aria-expanded="false">
+                    <i class="fas fa-ellipsis-h"></i>
+                  </button>
+                  <div class="dropdown-menu" aria-labelledby="optDD">
+                    <a class="dropdown-item curs-ptr" (click)="openModal(uplNewVer)"><i
+                        class="fas fa-upload mr-1"></i>Upload new version</a>
+                    <a class="dropdown-item curs-ptr"><i class="fas fa-download mr-1"></i>Download</a>
+                    <a class="dropdown-item curs-ptr"><i class="fas fa-trash mr-1"></i>Move to trash</a>
+                  </div>
+                </div>
+              </div>
               <mat-tab-group>
                 <mat-tab label="Properties">
                   <div class="properties row mx-0">
@@ -820,11 +834,15 @@
         </div>
       </div>
       <!-- filters -->
-      <div class="card-title px-2">
+      <div class="card-title pl-2">
         <span class="mr-2">Filtered by:</span>
-        <div class="btn btn-outline-primary btn-sm rounded-pill" style="padding: 0.15rem 0.5rem; font-size:0.75rem;">
+        <div class="btn btn-outline-primary btn-sm rounded-pill filter-btn">
           Audio
           <i class="fas fa-times"></i></div>
+        <div class="float-right">
+          <!-- <div class="btn btn-primary btn-sm mr-2">Save Filter</div> -->
+          <div class="btn btn-primary btn-sm">Clear</div>
+        </div>
       </div>
       <div class="search">
         <mat-form-field appearance="outline" class="custom-mat-input w-100 mb-2" [floatLabel]="'never'">
@@ -1564,5 +1582,64 @@
         Create
       </button>
     </div>
+  </form>
+</ng-template>
+
+<!-- upload file modal  -->
+<ng-template #uplNewVer let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title">Upload New Version</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body" ngbAutofocus>
+    <div class="alert alert-primary" role="alert">
+      <i class="fas fa-exclamation-triangle mr-2"></i>If this file is used in Collections and Shares, it will be
+      updated automatically in all those places.
+    </div>
+    <div class="custom-file-select" appFileDnd (fileDropped)="onFileDropped($event)">
+      <input type="file" multiple (change)="fileBrowseHandler($event)">
+      <input type="hidden" />
+      <div class="text-center my-5">
+        <h2><i class="fa fa-upload"></i></h2>
+        <h5>Drag & Drop file here</h5>
+        OR
+        <div class="btn btn-primary d-block w-25 mx-auto mt-3">Browse</div>
+      </div>
+    </div>
+    <div class="files-list">
+      <div class="single-file mt-3 row mx-0 p-2" *ngFor="let file of files; let i = index">
+        <div class="info mx-auto">
+          <h6 class="name mb-0 text-wrap">
+            {{ file?.name }}
+          </h6>
+          <p class="size mb-0">
+            {{ getSize(file?.size) }}
+          </p>
+          <app-file-progess [progress]="file?.progress"></app-file-progess>
+        </div>
+        <div>
+          <i class="fas fa-trash curs-ptr" (click)="deleteFile(i)"></i>
+        </div>
+      </div>
+    </div>
+    <hr>
+    <div class="w-100 dark-bg-hover p-2 rounded" (click)="showPropsSection()">
+      Form Permissions
+      <div class="float-right">
+        <i class="fa" [ngClass]="{'fa-angle-down': !dispPropsSec,'fa-angle-up': dispPropsSec}"></i>
+      </div>
+    </div>
+    <div class="mt-2" *ngIf="dispPropsSec">
+      <mat-checkbox class="d-block ml-3">Reset likes</mat-checkbox>
+      <mat-checkbox class="d-block ml-3">Keep current filename</mat-checkbox>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button class="btn btn-primary">
+      Save
+    </button>
+  </div>
   </form>
 </ng-template>
