--- a/src/app/hub/content-workspace/content-workspace.component.html
+++ b/src/app/hub/content-workspace/content-workspace.component.html
@@ -64,6 +64,21 @@
               </div>
             </div>
           </div>
+          <div class="card-title d-flex bg-hi-grey p-2 border-bottom">
+            <div class="btn btn-light btn-sm ml-auto mr-2"><i class="fas fa-chart-line mr-1"></i>Analytics</div>
+            <div class="dropdown">
+              <button class="btn btn-light btn-sm" type="button" id="optDD" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false">
+                <i class="fas fa-ellipsis-h"></i>
+              </button>
+              <div class="dropdown-menu" aria-labelledby="optDD">
+                <a class="dropdown-item curs-ptr" (click)="openModal(uplNewVer)"><i
+                    class="fas fa-upload mr-1"></i>Upload new version</a>
+                <a class="dropdown-item curs-ptr"><i class="fas fa-download mr-1"></i>Download</a>
+                <a class="dropdown-item curs-ptr"><i class="fas fa-trash mr-1"></i>Move to trash</a>
+              </div>
+            </div>
+          </div>
           <div class="card-body">
             <div class="discription row">
               <div class="col-6 text-center">
@@ -96,20 +111,6 @@
               </div>
             </div>
             <div class="workspace-nav mt-5">
-              <div class="float-right border-bottom">
-                <div class="dropdown">
-                  <button class="btn btn-light" type="button" id="optDD" data-toggle="dropdown" aria-haspopup="true"
-                    aria-expanded="false">
-                    <i class="fas fa-ellipsis-h"></i>
-                  </button>
-                  <div class="dropdown-menu" aria-labelledby="optDD">
-                    <a class="dropdown-item curs-ptr" (click)="openModal(uplNewVer)"><i
-                        class="fas fa-upload mr-1"></i>Upload new version</a>
-                    <a class="dropdown-item curs-ptr"><i class="fas fa-download mr-1"></i>Download</a>
-                    <a class="dropdown-item curs-ptr"><i class="fas fa-trash mr-1"></i>Move to trash</a>
-                  </div>
-                </div>
-              </div>
               <mat-tab-group>
                 <mat-tab label="Properties">
                   <div class="properties row mx-0">
@@ -1641,5 +1642,4 @@
       Save
     </button>
   </div>
-  </form>
 </ng-template>
