--- a/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
+++ b/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
@@ -204,7 +204,7 @@
       <!-- experiences -->
       <div class="text-secondary font-weight-bold my-2">Workspaces</div>
       <div class="d-flex border-bottom p-2 dark-bg-hover" *ngFor="let workspc of workspcArr"
-        (click)="showWorkspcFldrs(workspc.id)">
+        (click)="showWorkspcFldrs(workspc)">
         <div class="icon align-self-center mr-2">
           <img src="assets/images/discription.png" style="max-height:50px;">
         </div>
@@ -243,9 +243,16 @@
       </div>
     </div>
     <div *ngIf="!showAll">
-      <div>Nav</div>
+      <!-- <nav aria-label="breadcrumb">
+        <ol class="breadcrumb bg-white mb-0 p-0">
+          <li class="breadcrumb-item curs-ptr text-primary" (click)="backFolder()" style="font-size: 16px;"
+            *ngIf="folderNav.length>0"><i class="fa fa-arrow-left align-self-center"></i></li>
+          <li class="breadcrumb-item no-before">{{selWrkspc.name}}</li>
+          <li class="breadcrumb-item" *ngFor="let folNav of folderNav">{{folNav.name}}</li>
+        </ol>
+      </nav> -->
       <div class="d-flex border-bottom p-2 dark-bg-hover" *ngFor="let fldr of fldrArr"
-        (click)="showWorkspcFldrs(0, fldr.id)">
+        (click)="showWorkspcFldrs(0, fldr)">
         <div class="icon align-self-center mr-2">
           <img src="assets/images/discription.png" style="max-height:50px;">
         </div>
