--- a/src/app/web-app/resource/files/files.component.html
+++ b/src/app/web-app/resource/files/files.component.html
@@ -50,6 +50,26 @@
         <span class="text-primary mr-2 curs-ptr">Name<i class="fa fa-sort-down align-top ml-1"></i></span>
         <span class="text-primary curs-ptr">Date Modified<i class="fa fa-sort-down align-top ml-1"></i></span>
       </div>
+      <!-- folders -->
+      <div class="text-secondary">Folders</div>
+      <div class="mt-2 row my-files" *ngIf="view">
+        <div class="card-container col-lg-3 col-md-4 col-sm-6 my-3 mx-auto mx-sm-0">
+          <div class="card curs-ptr">
+            <div class="card-body d-flex">
+              <div class="name align-self-center px-0"><i class="fas fa-folder mr-1"></i>Folder name 1234</div>
+              <div class="d-flex p-0 __options ml-auto">
+                <div class="_options">
+                  <div class="btn btn-light btn-sm mr-1"><i class="fas fa-edit"></i></div>
+                  <div class="btn btn-light btn-sm mr-1"><i class="fas fa-trash-alt"></i></div>
+                </div>
+                <mat-checkbox class="align-self-center"></mat-checkbox>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- files -->
+      <div class="text-secondary">Files</div>
       <div class="mt-2 row my-files" *ngIf="view">
         <div class="card-container col-lg-3 col-md-4 col-sm-6 my-3 mx-auto mx-sm-0" *ngFor="let t of testArr">
           <div class="card curs-ptr">
